chore: Make method return mutable collection in all cases